# q

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  LICENSE  README.md  index.html  mkdocs.yml  search-index.js  sitemap.xml
aux/: CMakeLists.txt  main.cpp
aux/include/q_aux/: audio_file.hpp
aux/src/: audio_file.cpp
example/: CMakeLists.txt  biquad_filters.cpp  delay.cpp  example.hpp  gen_sin.cpp  get_midi_device.hpp  grain_freeze.cpp  io_delay.cpp  list_devices.cpp  midi_monitor.cpp  sin_osc.cpp  sin_synth.cpp  square_synth.cpp  sustain_hold.cpp
example/common/: CMakeLists.txt  example.hpp  keyboard.hpp
example/delay/: CMakeLists.txt  delay.cpp
example/grain_freeze/: CMakeLists.txt  grain_freeze.cpp
example/io_delay/: CMakeLists.txt  io_delay.cpp
example/list_devices/: CMakeLists.txt  list_devices.cpp
example/midi_monitor/: CMakeLists.txt  midi_monitor.cpp
example/poly_synth/: CMakeLists.txt  poly_synth.cpp
example/sin_osc/: CMakeLists.txt  sin_osc.cpp
example/square_synth/: CMakeLists.txt  square_synth.cpp
example/sustain_hold/: CMakeLists.txt  sustain_hold.cpp
example/waveforms/: CMakeLists.txt  waveforms.cpp
io/: CMakeLists.txt  main.cpp
io/include/q_io/: audio_file.hpp
io/src/: audio_file.cpp
q_io/: CMakeLists.txt
q_io/cmake/: FindPortaudio.cmake  Findportaudio.cmake  Findportmidi.cmake
q_io/include/q_io/: audio_device.hpp  audio_file.hpp  audio_stream.hpp  midi.hpp  midi_device.hpp  midi_stream.hpp
q_io/src/: audio_device.cpp  audio_file.cpp  audio_stream.cpp  midi_device.cpp  midi_stream.cpp
q_lib/: CMakeLists.txt
q_lib/include/q/: bacf.hpp  biquad.hpp  bitstream.hpp  buffer.hpp  decibel.hpp  delay.hpp  envelope.hpp  envelope_processor.hpp  frequency.hpp  fx.hpp  interpolation.hpp  literals.hpp  lut.hpp  notes.hpp  phase.hpp  pitch.hpp  pitch_detector.hpp  pitch_follower.hpp  ring_buffer.hpp  sfx.hpp  support.hpp  synth.hpp  synth_base.hpp  utility.hpp  value.hpp
test/: CMakeLists.txt  agc.cpp  allpass.cpp  ar_envelope_follower.cpp  attack_detection.cpp  autocorrelation.cpp  autocorrelation2.cpp  best_lag.cpp  biquad_lp.cpp  bitset.cpp  bitstream.cpp  chamberlin_filter.cpp  clip.cpp  comb.cpp  compressor_expander.cpp  compressor_expander2.cpp  compressor_ff_fb.cpp  compressor_limiter.cpp  compressor_limiter2.cpp  decibel.cpp  delay.cpp  dual_pitch_detector.cpp  dynamic_smoother.cpp  dynamics.cpp  envelope.cpp  envelope_follower.cpp  envelope_processor.cpp  envelope_shaper.cpp  envelope_shaper_2.cpp  envelope_tracking.cpp  fast_ave_envelope_follower.cpp  fast_envelope_follower.cpp  fast_rms_envelope_follower.cpp  fft.cpp  gen_adsr_envelope.cpp  gen_basic_pulse.cpp  gen_basic_saw.cpp  gen_basic_square.cpp  gen_basic_triangle.cpp  gen_basic_waves.cpp  (+92 more)
test/audio_files/: 10-B 12th.aif  11-High E.aif  12-High E 12th.aif  2-Low E 2th.aif  3-A.aif  4-A 12th.aif  5-D.aif  6-D 12th.aif  7-G.aif  8-G 12th.aif  9-B.aif  Bend-Slide G.aif  Hammer-Pull High E.aif  MANIFEST.md  Slide G.aif  Tapping D.aif  harmonics_1318.aif  harmonics_261.aif  harmonics_329.aif  sin_440.aif  watda1.aif
test/benchmark/: CMakeLists.txt  decibel_bench.cpp  interpolation_bench.cpp  log2_bench.cpp  sin_bench.cpp  soft_clip_bench.cpp
test/golden/: agc_1a-Low-E.csv  agc_1b-Low-E-12th.csv  agc_Bend-Slide G.csv  agc_GStaccato.csv  agc_Hammer-Pull High E.csv  agc_Tapping D.csv  agc_sin_envelope.csv  biquad_lp_-1a-Low-B.csv  biquad_lp_-2a-F#.csv  biquad_lp_1a-Low-E.csv  biquad_lp_1b-Low-E-12th.csv  biquad_lp_2a-A.csv  biquad_lp_2b-A-12th.csv  biquad_lp_3a-D.csv  biquad_lp_3b-D-12th.csv  biquad_lp_4a-G.csv  biquad_lp_4b-G-12th.csv  biquad_lp_5a-B.csv  biquad_lp_5b-B-12th.csv  biquad_lp_6a-High-E.csv  biquad_lp_6b-High-E-12th.csv  biquad_lp_Bend-Slide G.csv  biquad_lp_GLines1.csv  biquad_lp_GLines2.csv  biquad_lp_GLines3.csv  biquad_lp_GStaccato.csv  biquad_lp_Hammer-Pull High E.csv  biquad_lp_Tapping D.csv  comb_1a-Low-E.csv  comb_1b-Low-E-12th.csv  comb_Bend-Slide G.csv  comb_GStaccato.csv  comb_Hammer-Pull High E.csv  comb_Tapping D.csv  comp_exp_1a-Low-E.csv  comp_exp_Bend-Slide G.csv  comp_exp_GStaccato.csv  comp_exp_Hammer-Pull High E.csv  comp_exp_Tapping D.csv  comp_ff_fb_1a-Low-E.csv  (+115 more)
test/golden/agc/: 1a-Low-E.csv  1b-Low-E-12th.csv  Bend-Slide G.csv  Tapping D.csv
test/golden/biquad_lp/: -2a-F#.csv  1a-Low-E.csv  2a-A.csv  5a-B.csv  Bend-Slide G.csv  GLines1.csv  GLines2.csv
test/golden/comb/: 1a-Low-E.csv  Bend-Slide G.csv  Hammer-Pull High E.csv  Tapping D.csv
test/golden/comp_exp/: 1a-Low-E.csv  Hammer-Pull High E.csv
test/golden/comp_ff_fb/: 1a-Low-E.csv
test/golden/comp_lim2/: 1a-Low-E.csv  Bend-Slide G.csv  GStaccato.csv
test/golden/dynamic_smoother/: 1b-Low-E-12th.csv  1c-Low-E-24th.csv  Bend-Slide G.csv  Hammer-Pull High E.csv
test/golden/dynamics/: compressor_limiter.csv  curve_agc.csv  curve_compressor.csv  curve_compressor_expander.csv  curve_expander.csv  curve_limiter.csv  curve_soft_knee_compressor.csv
test/golden/env_follow/: 1a-Low-E.csv  GStaccato.csv  Tapping D.csv
test/golden/frequencies/: -1c-Low-B-24th.csv  -2c-F#-24th.csv  1b-Low-E-12th.csv  2a-A.csv  3a-D.csv  4b-G-12th.csv  5b-B-12th.csv  5c-B-24th.csv  GLines1.csv  GLines2.csv  GLines3.csv  Hammer-Pull High E.csv  ShortStaccato.csv  Tapping D.csv  sin_440.csv
test/golden/moving_average/: 1a-Low-E.csv  1b-Low-E-12th.csv  1c-Low-E-24th.csv  Bend-Slide G.csv  GStaccato.csv  Hammer-Pull High E.csv
test/golden/moving_maximum/: Bend-Slide G.csv  Hammer-Pull High E.csv  Tapping D.csv
test/golden/peak_picker/: 1a-Low-E.csv  2a-A.csv  4a-G.csv  6a-High-E.csv  GStaccato.csv  Hammer-Pull High E.csv  Tapping D.csv
test/golden/peaks/: 1a-Low-E.csv  1b-Low-E-12th.csv  2a-A.csv  2b-A-12th.csv  3a-D.csv  3b-D-12th.csv  4a-G.csv  4b-G-12th.csv  5a-B.csv  5b-B-12th.csv  6a-High-E.csv  6b-High-E-12th.csv  Hammer-Pull High E.csv  Tapping D.csv
test/golden/rms_envelope_follower/: Bend-Slide G.csv
test/golden/signal_conditioner/: 1a-Low-E.csv  1b-Low-E-12th.csv  Bend-Slide G.csv  GLines2.csv  GStaccato.csv  Hammer-Pull High E.csv  Slide G.csv  (+1 more)
test/results/: readme.txt
(+1035 files in other folders)
